@@ -29,13 +29,20 @@ List DateExample(DateVector & dv, DatetimeVector & dtv) {
 
     Rcout << "\nIn C++, seeing the following date values before/after adding a week:\n";
     print(formatDate(dv));
+#if RCPP_VERSION >= RcppDevVersion(0,12,8)
     dv = dv + 7;		// shift a week
+#else
+    // fallback for older Rcpp versions
+    for (size_t i=0; i<dv.size(); i++) {
+        dv[i] = dv[i] + 7;
+    }
+#endif
     print(formatDate(dv));
 
     Rcout << "\nIn C++, seeing the following datetime values before/after adding a quarter second:\n";
     print(formatDatetime(dtv));
 #if RCPP_DEV_VERSION >= RcppDevVersion(0,12,8,1)
-    // this didn't get quite right in Rcpp 0.12.8
+    // this didn't get done quite right in Rcpp 0.12.8
     dtv = dtv + 0.250;          // shift 250 millisec
 #else
     // fallback
